--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
-name: culture_exploration
+name: geograf
 description: A new Flutter project.
+
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.1.1
+  flutter_speed_dial: ^6.1.0+1
 
 dev_dependencies:
   flutter_test:
@@ -62,13 +64,24 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/img1.jpeg
-     - images/img2.jpeg
-     - images/img3.jpeg
-     - images/img4.jpeg
-     - images/img5.jpeg
+    - assets/img1.jpg
+    - assets/img2.jpg
+    - assets/img3.jpg
+    - assets/img4.jpg
+    - assets/img5.jpg
+    - assets/img6.jpg
+    - assets/img7.jpg
+    - assets/img8.jpg
+    - assets/img9.jpg
+    - assets/img10.jpg
+    - assets/img11.jpg
+    - assets/img12.jpg
+    - assets/img13.jpg
+    - assets/img14.jpg
+    - assets/img15.jpg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
+
+    # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
   # For details regarding adding assets from package dependencies, see
